syntax = "proto3";

package gophkeeper.v1;

import "buf/validate/validate.proto";
import "gophkeeper/v1/common.proto";

option go_package = "github.com/patraden/ya-practicum-gophkeeper/api/gophkeeper/v1;proto";

service UserService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
}

message LoginRequest {
  string username = 1 [(buf.validate.field).string = {
    min_len: 3
    max_len: 64
  }];
  string password = 2 [(buf.validate.field).string = {
    min_len: 8
    max_len: 128
  }];
}

message LoginResponse {
  string token = 1;
  string user_id = 2;
  UserRole role = 3;
}

message RegisterRequest {
  string username = 1 [(buf.validate.field).string.min_len = 3];
  string password = 2 [(buf.validate.field).string.min_len = 8];
  UserRole role = 3 [(buf.validate.field).enum.defined_only = true];
}

message RegisterResponse {
  string token = 1;
  string user_id = 2;
  UserRole role = 3;
}
